--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2699,7 +2699,8 @@ makeComments(&#39;avatar&#39;, &#39;waits&#39;);
 &lt;&lt;/liveblock&gt;&gt;
 
 &lt;&lt;/nobr&gt;&gt;
-</tw-passagedata><tw-passagedata pid="63" name="avatar_end" tags="" position="1725,1600" size="200,200"></tw-passagedata><tw-passagedata pid="64" name="hachi_end" tags="" position="1975,1600" size="200,200"></tw-passagedata><tw-passagedata pid="65" name="PassageFooter" tags="" position="1150,325" size="200,100">&lt;&lt;liveblock&gt;&gt;
+</tw-passagedata><tw-passagedata pid="63" name="avatar_end" tags="" position="1725,1600" size="200,200">&lt;&lt;set $avatar_passage to &quot;avatar_end/Placeholder for Buro&#39;s end/street/&quot;&gt;&gt;
+</tw-passagedata><tw-passagedata pid="64" name="hachi_end" tags="" position="1975,1600" size="200,200">&lt;&lt;set $hachi_passage to &quot;hachi_end/Placeholder for Hachi&#39;s end./street/&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="65" name="PassageFooter" tags="" position="1150,325" size="200,100">&lt;&lt;liveblock&gt;&gt;
 
 &lt;&lt;if $prev_avatar_passage !== $avatar_passage&gt;&gt;
    &lt;&lt;set avatar_passage to $avatar_passage&gt;&gt;
