--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2684,11 +2684,11 @@ makeComments(&#39;avatar&#39;, &#39;waits&#39;);
 
 &lt;&lt;liveblock&gt;&gt;
     &lt;&lt;if $hachi_checkpoint is &quot;hachi_garden&quot; and $avatar_checkpoint is &quot;avatar_garden&quot;&gt;&gt;
-        &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
+        &lt;&lt;replace &quot;avatar_story&quot;&gt;&gt;
         	&lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint&gt;&gt;
             &lt;&lt;include &quot;avatar_end&quot;&gt;&gt;
         &lt;&lt;/replace&gt;&gt;
-        &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
+        &lt;&lt;replace &quot;hachi_story&quot;&gt;&gt;
         	&lt;&lt;set $previousHachi_checkpoint to $hachi_checkpoint&gt;&gt;
             &lt;&lt;include &quot;hachi_end&quot;&gt;&gt;
         &lt;&lt;/replace&gt;&gt;
