--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2698,7 +2698,7 @@ makeComments(&#39;avatar&#39;, &#39;waits&#39;);
 
 &lt;&lt;/nobr&gt;&gt;
 </tw-passagedata><tw-passagedata pid="63" name="avatar_end" tags="" position="1725,1600" size="200,200">&lt;&lt;script&gt;&gt;stopComments(`avatar`)&lt;&lt;/script&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_end/Buro&#39;s eyes widen in surprise as he spots Hachi walking alongside Lina, a flicker of recognition igniting within him. Hachi&#39;s tail wags enthusiastically, his eyes full of joy at the sight of his friend./panting/&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_end_00/Buro&#39;s eyes widen in surprise as he spots Hachi walking alongside Lina, a flicker of recognition igniting within him. Hachi&#39;s tail wags enthusiastically, his eyes full of joy at the sight of his friend./panting/&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
@@ -2709,12 +2709,12 @@ $avatar_passage
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_end_01false&quot;&gt;&gt;
   &lt;&lt;if $avatar_tag == &quot;21&quot;&gt;&gt;
-    &lt;&lt;set $avatar_passage to &quot;avatar_end_02/Buro rushes forward, his heart full of relief and affection as he kneels down to embrace avatar. They simply share a moment of pure connection. &#39;Hachi! There you are, you little rascal,&#39; said Buro. /barking3/&quot;&gt;&gt;
+    &lt;&lt;set $avatar_passage to &quot;avatar_end_02/Buro rushes forward, his heart full of relief and affection as he kneels down to embrace Hachi. They simply share a moment of pure connection. &#39;Hachi! There you are, you little rascal,&#39; said Buro. /barking3/&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_end_02false&quot; and $avatar_part_mov == &quot;head&quot;&gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_end_03/I was so worried about you. Are you alright?&quot; Hachi responds with a series of joyful barks, nuzzling against Buro&#39;s hand as if to reassure him. Lina watches the heartwarming scene with a smile, feeling a sense of camaraderie in their bond./whine/&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_end_03/&#39;I was so worried about you. Are you alright?&#39; Hachi responds with a series of joyful barks, nuzzling against Buro&#39;s hand as if to reassure him. Lina watches the heartwarming scene with a smile, feeling a sense of camaraderie in their bond./whine/&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_end_03false&quot; 
