--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2717,7 +2717,7 @@ $avatar_passage
   &lt;&lt;set $avatar_passage to &quot;avatar_end_03/&#39;I was so worried about you. Are you alright?&#39; Hachi responds with a series of joyful barks, nuzzling against Buro&#39;s hand as if to reassure him. Lina watches the heartwarming scene with a smile, feeling a sense of camaraderie in their bond./whine/&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $avatar_narrating == &quot;avatar_end_03false&quot; 
+&lt;&lt;if $avatar_narrating == &quot;avatar_end_03false&quot;&gt;&gt;
   &lt;&lt;set $avatar_passage to &quot;avatar_end_04/&#39;Looks like you two have quite the bond,&#39; said Lina softly. Buro looks up, meeting Lina&#39;s gaze with a shy smile. In that, they find comfort in each other&#39;s presence, knowing that true friendship between humans and dogs know no bounds./f_talk4&quot;&gt;&gt;
 &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
