--- a/index.html
+++ b/index.html
@@ -780,32 +780,36 @@
 					var messageDisplayDiv = document.getElementById("messageDisplayDiv");
 					var delimiterIndex = message.indexOf("/"); // Find the index of the first delimiter "/"
 
-					// Check if speaking is true, if so, exit early.
-					// if (speaking) {
-					// 	return;
-					// }
-
 					if (delimiterIndex !== -1) { // Check if the first delimiter exists
 						messageID_tmp = message.substring(0, delimiterIndex); // Store the message ID
 						var secondDelimiterIndex = message.indexOf("/", delimiterIndex + 1); // Find the index of the second delimiter "/"
 
-						if (secondDelimiterIndex !== -1 && secondDelimiterIndex !== delimiterIndex) { // Check if the second delimiter exists and is not the same as the first one
+						if (secondDelimiterIndex !== -1 && secondDelimiterIndex !== delimiterIndex) { // Check if the second delimiter exists
 							var thirdDelimiterIndex = message.indexOf("/", secondDelimiterIndex + 1); // Find the index of the third delimiter "/"
 
 							if (thirdDelimiterIndex !== -1) { // Check if the third delimiter exists
+								var fourthDelimiterIndex = message.indexOf("/", thirdDelimiterIndex + 1); // Find the index of the fourth delimiter "/"
+
 								var fullMessage = message.substring(delimiterIndex + 1, secondDelimiterIndex).trim(); // Extract the message text between the first and second delimiters
 								var audioSoundscape = message.substring(secondDelimiterIndex + 1, thirdDelimiterIndex).trim(); // Extract the audioSoundscape variable between the second and third delimiters
 
 								clearTimeout(timeoutID);
 								speakMessage(fullMessage);
 								updateDisplay(fullMessage);
+
 								if (audioSoundscape !== "") {
 									window[audioSoundscape + "_Sound"].play(); // Play the corresponding audio based on the audioSoundscape variable if it is not empty
 								}
 
-								// Set playAction to true so it provied affordance for action
-								playAction = true;
-							} else { // If the third delimiter does not exist
+								if (fourthDelimiterIndex !== -1) { // If the fourth delimiter exists
+									var functionToEval = message.substring(thirdDelimiterIndex + 1, fourthDelimiterIndex).trim(); // Extract the function between the third and fourth delimiters
+									try {
+										eval(functionToEval); // Run the function using eval()
+									} catch (error) {
+										console.error("Error executing function: " + error);
+									}
+								}
+							} else { // Handle the case where there's no third delimiter
 								var fullMessage = message.substring(delimiterIndex + 1, secondDelimiterIndex).trim(); // Extract the message text between the first and second delimiters
 								var audioSoundscape = message.substring(secondDelimiterIndex + 1).trim(); // Extract the audioSoundscape variable after the second delimiter
 
@@ -816,15 +820,14 @@
 									window[audioSoundscape + "_Sound"].play(); // Play the corresponding audio based on the audioSoundscape variable if it is not empty
 								}
 							}
-						} else { // If the second delimiter does not exist or is the same as the first one
+						} else { // Handle the case where there's no second delimiter
 							var fullMessage = message.substring(delimiterIndex + 1).trim(); // Extract the message text after the first delimiter
 							clearTimeout(timeoutID);
 							speakMessage(fullMessage);
 							updateDisplay(fullMessage);
 						}
-					} else { // If the first delimiter does not exist
+					} else { // Handle the case where there's no delimiter at all
 						var fullMessage = message.trim(); // The full message is the entire input
-						messageID = oldMessageID; // Set message ID to an empty string globally
 						clearTimeout(timeoutID);
 						speakMessage(fullMessage);
 						updateDisplay(fullMessage);
