--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2395,7 +2395,7 @@ Today, will be a different day./park3&quot;&gt;&gt;
 
   &lt;&lt;if $hachi_narrating == &quot;both_01false&quot;&gt;&gt;
    &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
-  		&lt;&lt;include&quot;hachi_act2_transition&quot;&gt;&gt;
+  		&lt;&lt;include&quot;hachi_preamble&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -3101,7 +3101,7 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
         &lt;/div&gt;
 &lt;/div&gt;
 
-&lt;&lt;include &quot;both_preamble&quot;&gt;&gt;	
+&lt;&lt;include &quot;hachi_act2_transition&quot;&gt;&gt;	
    
 /*
 &lt;&lt;set $storyWeather to &#39;&#39;&gt;&gt;
