--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -942,14 +942,15 @@ window.makeShortComments = async function(character, key) {
   &lt;&lt;/script&gt;&gt;
 &lt;&lt;set $avatar_passage to &quot;&quot;&gt;&gt;
 &lt;&lt;set $hachi_passage to &quot;&quot;&gt;&gt;
-
-&lt;&lt;set $avatar_narrating to &quot;&quot;&gt;&gt;
-&lt;&lt;set $hachi_narrating to &quot;&quot;&gt;&gt;
-&lt;&lt;set avatar_narrating to $avatar_narrating&gt;&gt;
-&lt;&lt;set hachi_narrating to $hachi_narrating&gt;&gt;
+&lt;&lt;set avatar_checkpoint to &quot;&quot;&gt;&gt;
+&lt;&lt;set hachi_checkpoint to &quot;&quot;&gt;&gt;
+&lt;&lt;set avatar_narrating to &quot;&quot;&gt;&gt;
+&lt;&lt;set hachi_narrating to &quot;&quot;&gt;&gt;
 &lt;&lt;script&gt;&gt;
     writeToAvatar(&#39;avatar_narrating&#39;,avatar_narrating);
     writeToHachi(&#39;hachi_narrating&#39;,hachi_narrating);
+    writeToAvatar(&#39;avatar_checkpoint&#39;,avatar_checkpoint);
+    writeToHachi(&#39;hachi_checkpoint&#39;,hachi_checkpoint);
     console.log(&quot;Initializing narration&quot;);
 &lt;&lt;/script&gt;&gt;
 
@@ -1321,7 +1322,7 @@ console.log(variables().hachi_comment);
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="14" name="hachi_tram" tags="" position="1200,900" size="100,200">&lt;&lt;set $hachi_passage to &quot;hachi_tram/Hachi is now at the tram stop; is Leo&#39;s tram here?/tramdepart/&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
-  &lt;&lt;if $hachi_tag == 290&gt;&gt;
+  &lt;&lt;if $hachi_tag == 29&gt;&gt;
       &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
           &lt;&lt;include&quot;hachi_tram_1&quot;&gt;&gt;
     &lt;&lt;/replace&gt;&gt;
@@ -2891,7 +2892,10 @@ makeComments(&#39;hachi&#39;,&#39;observes&#39;);
 &lt;&lt;liveblock&gt;&gt;
   &lt;&lt;if ($hachi_checkpoint == &quot;hachi_tram&quot; and $previousHachi_checkpoint !== $hachi_checkpoint) || $hachi_tag == 29 and $previousHachi_checkpoint !== &quot;hachi_tram&quot;&gt;&gt;
       &lt;&lt;if $hachi_tag == 29&gt;&gt;
-          &lt;&lt;set $hachi_checkpoint to &quot;hachi_tram&quot;&gt;&gt;
+          &lt;&lt;set hachi_checkpoint to &quot;hachi_tram&quot;&gt;&gt;
+          &lt;&lt;script&gt;&gt;
+          writeToHachi(&#39;hachi_checkpoint&#39;,hachi_checkpoint);
+          &lt;&lt;/script&gt;&gt;
       &lt;&lt;/if&gt;&gt;
       &lt;&lt;script&gt;&gt;stopComments(&#39;hachi&#39;)&lt;&lt;/script&gt;&gt;
       &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
@@ -2901,17 +2905,23 @@ makeComments(&#39;hachi&#39;,&#39;observes&#39;);
 
   &lt;&lt;elseif ($hachi_checkpoint == &quot;hachi_fountain&quot; and $previousHachi_checkpoint !== $hachi_checkpoint) || $hachi_tag == 24 and $previousHachi_checkpoint !== &quot;hachi_fountain&quot;&gt;&gt;
       &lt;&lt;if $hachi_tag == 24&gt;&gt;
-          &lt;&lt;set $hachi_checkpoint to &quot;hachi_fountain&quot;&gt;&gt;
+          &lt;&lt;set hachi_checkpoint to &quot;hachi_fountain&quot;&gt;&gt;
+          &lt;&lt;script&gt;&gt;
+          writeToHachi(&#39;hachi_checkpoint&#39;,hachi_checkpoint);
+          &lt;&lt;/script&gt;&gt;
       &lt;&lt;/if&gt;&gt;
       &lt;&lt;script&gt;&gt;stopComments(&#39;hachi&#39;)&lt;&lt;/script&gt;&gt;
       &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
-          &lt;&lt;set $previousHachi_checkpoint to $hachi_checkpoint&gt;&gt;
+          &lt;&lt;set $previousHachi_checkpoint to hachi_checkpoint&gt;&gt;
           &lt;&lt;include &quot;hachi_fountain&quot;&gt;&gt;
       &lt;&lt;/replace&gt;&gt;
 
   &lt;&lt;elseif ($hachi_checkpoint == &quot;hachi_stairs&quot; and $previousHachi_checkpoint !== $hachi_checkpoint) || $hachi_tag == 25 and $previousHachi_checkpoint !== &quot;hachi_stairs&quot;&gt;&gt;
       &lt;&lt;if $hachi_tag == 25&gt;&gt;
-          &lt;&lt;set $hachi_checkpoint to &quot;hachi_stairs&quot;&gt;&gt;
+          &lt;&lt;set hachi_checkpoint to &quot;hachi_stairs&quot;&gt;&gt;
+          &lt;&lt;script&gt;&gt;
+          writeToHachi(&#39;hachi_checkpoint&#39;,hachi_checkpoint);
+          &lt;&lt;/script&gt;&gt;
       &lt;&lt;/if&gt;&gt;
       &lt;&lt;script&gt;&gt;stopComments(&#39;hachi&#39;)&lt;&lt;/script&gt;&gt;
       &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
@@ -2922,9 +2932,11 @@ makeComments(&#39;hachi&#39;,&#39;observes&#39;);
   &lt;&lt;elseif ($hachi_checkpoint == &quot;hachi_bank&quot; and $previousHachi_checkpoint !== $hachi_checkpoint) || $hachi_tag == 23 and $previousHachi_checkpoint !== &quot;hachi_bank&quot;&gt;&gt;
       &lt;&lt;if $hachi_turn == 3&gt;&gt;
           &lt;&lt;if $hachi_tag == 23&gt;&gt;
-              &lt;&lt;set $hachi_checkpoint to &quot;hachi_bank&quot;&gt;&gt;
+              &lt;&lt;set hachi_checkpoint to &quot;hachi_bank&quot;&gt;&gt;
+              &lt;&lt;script&gt;&gt;
+              writeToHachi(&#39;hachi_checkpoint&#39;,hachi_checkpoint);
+              &lt;&lt;/script&gt;&gt;
           &lt;&lt;/if&gt;&gt;
-
           &lt;&lt;script&gt;&gt;stopComments(&#39;hachi&#39;)&lt;&lt;/script&gt;&gt;
           &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
               &lt;&lt;set $previousHachi_checkpoint to $hachi_checkpoint&gt;&gt;
@@ -3027,35 +3039,64 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
 &lt;&lt;/repeat&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
-    &lt;&lt;if $avatar_checkpoint is &quot;avatar_tobacco&quot; and $previousAvatar_checkpoint !== avatar_checkpoint&gt;&gt;
-    	&lt;&lt;script&gt;&gt;stopComments(`avatar`)&lt;&lt;/script&gt;&gt;
-        &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
-        	&lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint&gt;&gt;
-            &lt;&lt;include &quot;avatar_tobacco&quot;&gt;&gt;
-        &lt;&lt;/replace&gt;&gt;
-    &lt;&lt;elseif $avatar_checkpoint is &quot;avatar_bakery&quot; and $previousAvatar_checkpoint !== avatar_checkpoint&gt;&gt;
-    	&lt;&lt;script&gt;&gt;stopComments(`avatar`)&lt;&lt;/script&gt;&gt;
-        &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
-        	&lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint&gt;&gt;
-            &lt;&lt;include &quot;avatar_bakery&quot;&gt;&gt;
-        &lt;&lt;/replace&gt;&gt;
-    &lt;&lt;elseif $avatar_checkpoint is &quot;avatar_bank&quot; and $previousAvatar_checkpoint !== avatar_checkpoint&gt;&gt;
-    	&lt;&lt;script&gt;&gt;stopComments(`avatar`)&lt;&lt;/script&gt;&gt;
-        &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
-        	&lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint &gt;&gt;
-            &lt;&lt;include &quot;avatar_bank&quot;&gt;&gt;
-        &lt;&lt;/replace&gt;&gt;
-    &lt;&lt;elseif $avatar_checkpoint is &quot;avatar_church&quot;  and $previousAvatar_checkpoint !== avatar_checkpoint&gt;&gt;
-    	&lt;&lt;script&gt;&gt;stopComments(`avatar`)&lt;&lt;/script&gt;&gt;
-        &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
-       	 	&lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint&gt;&gt;
-            &lt;&lt;include &quot;avatar_church&quot;&gt;&gt;
-        &lt;&lt;/replace&gt;&gt;
-    &lt;&lt;/if&gt;&gt;
-&lt;&lt;/liveblock&gt;&gt;
+  &lt;&lt;if ($avatar_checkpoint == &quot;avatar_tobacco&quot; and $previousAvatar_checkpoint !== $avatar_checkpoint) || $avatar_tag == 28 and $previousAvatar_checkpoint !== &quot;avatar_tobacco&quot;&gt;&gt;
+      &lt;&lt;if $avatar_tag == 28&gt;&gt;
+          &lt;&lt;set avatar_checkpoint to &quot;avatar_tobacco&quot;&gt;&gt;
+          &lt;&lt;script&gt;&gt;
+          writeToAvatar(&#39;avatar_checkpoint&#39;,avatar_checkpoint);
+          &lt;&lt;/script&gt;&gt;
+      &lt;&lt;/if&gt;&gt;
+      &lt;&lt;script&gt;&gt;stopComments(&#39;avatar&#39;)&lt;&lt;/script&gt;&gt;
+      &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
+          &lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint&gt;&gt;
+          &lt;&lt;include &quot;avatar_tobacco&quot;&gt;&gt;
+      &lt;&lt;/replace&gt;&gt;
 
-&lt;&lt;/nobr&gt;&gt;
-</tw-passagedata><tw-passagedata pid="76" name="main" tags="" position="1275,675" size="200,100">&lt;&lt;nobr&gt;&gt;
+  &lt;&lt;elseif ($avatar_checkpoint == &quot;avatar_bakery&quot; and $previousAvatar_checkpoint !== $avatar_checkpoint) || $avatar_tag == 27 and $previousAvatar_checkpoint !== &quot;avatar_bakery&quot;&gt;&gt;
+      &lt;&lt;if $avatar_tag == 27&gt;&gt;
+          &lt;&lt;set avatar_checkpoint to &quot;avatar_bakery&quot;&gt;&gt;
+          &lt;&lt;script&gt;&gt;
+          writeToAvatar(&#39;avatar_checkpoint&#39;,avatar_checkpoint);
+          &lt;&lt;/script&gt;&gt;
+      &lt;&lt;/if&gt;&gt;
+      &lt;&lt;script&gt;&gt;stopComments(&#39;avatar&#39;)&lt;&lt;/script&gt;&gt;
+      &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
+          &lt;&lt;set $previousAvatar_checkpoint to avatar_checkpoint&gt;&gt;
+          &lt;&lt;include &quot;avatar_bakery&quot;&gt;&gt;
+      &lt;&lt;/replace&gt;&gt;
+
+  &lt;&lt;elseif ($avatar_checkpoint == &quot;avatar_church&quot; and $previousAvatar_checkpoint !== $avatar_checkpoint) || $avatar_tag == 26 and $previousAvatar_checkpoint !== &quot;avatar_church&quot;&gt;&gt;
+      &lt;&lt;if $avatar_tag == 26&gt;&gt;
+          &lt;&lt;set avatar_checkpoint to &quot;avatar_church&quot;&gt;&gt;
+          &lt;&lt;script&gt;&gt;
+          writeToAvatar(&#39;avatar_checkpoint&#39;,avatar_checkpoint);
+          &lt;&lt;/script&gt;&gt;
+      &lt;&lt;/if&gt;&gt;
+      &lt;&lt;script&gt;&gt;stopComments(&#39;avatar&#39;)&lt;&lt;/script&gt;&gt;
+      &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
+          &lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint&gt;&gt;
+          &lt;&lt;include &quot;avatar_church&quot;&gt;&gt;
+      &lt;&lt;/replace&gt;&gt;
+
+  &lt;&lt;elseif ($avatar_checkpoint == &quot;avatar_bank&quot; and $previousAvatar_checkpoint !== $avatar_checkpoint) || $avatar_tag == 23 and $previousAvatar_checkpoint !== &quot;avatar_bank&quot;&gt;&gt;
+      &lt;&lt;if $avatar_turn == 3&gt;&gt;
+          &lt;&lt;if $avatar_tag == 23&gt;&gt;
+              &lt;&lt;set avatar_checkpoint to &quot;avatar_bank&quot;&gt;&gt;
+              &lt;&lt;script&gt;&gt;
+              writeToAvatar(&#39;avatar_checkpoint&#39;,avatar_checkpoint);
+              &lt;&lt;/script&gt;&gt;
+          &lt;&lt;/if&gt;&gt;
+          &lt;&lt;script&gt;&gt;stopComments(&#39;avatar&#39;)&lt;&lt;/script&gt;&gt;
+          &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
+              &lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint&gt;&gt;
+              &lt;&lt;include &quot;avatar_bank&quot;&gt;&gt;
+          &lt;&lt;/replace&gt;&gt;
+      &lt;&lt;else&gt;&gt;
+          &lt;&lt;set $avatar_passage to &quot;avatar_transition/It seems the bank is closed right now. &#39;I will come back later&#39; Buro said, &#39;Maybe I can explore other places first like the bakery, the tobacco shop, or the church.&#39;&quot;&gt;&gt;
+      &lt;&lt;/if&gt;&gt;
+  &lt;&lt;/if&gt;&gt;
+&lt;&lt;/liveblock&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="76" name="main" tags="" position="1275,675" size="200,100">&lt;&lt;nobr&gt;&gt;
 
 &lt;&lt;silently&gt;&gt;
   &lt;&lt;repeat 150ms&gt;&gt;
@@ -3101,7 +3142,7 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
         &lt;/div&gt;
 &lt;/div&gt;
 
-&lt;&lt;include &quot;hachi_act2_transition&quot;&gt;&gt;	
+&lt;&lt;include &quot;avatar_act2_transition&quot;&gt;&gt;	
    
 /*
 &lt;&lt;set $storyWeather to &#39;&#39;&gt;&gt;
