--- a/index.html
+++ b/index.html
@@ -1257,6 +1257,7 @@
 						const statusVar = (deviceName === 'hachi_BT') ? 'hachi_status' :'avatar_status' ;
 						const speedVar = (deviceName === 'hachi_BT') ? 'hachi_speed' :'avatar_speed' ;
 						const speakingVar = (deviceName === 'hachi_BT') ? 'hachi_narrating' :'avatar_narrating' ;
+						const nameVar = (deviceName === 'hachi_BT') ? 'hachi_name' :'avatar_name' ;
 
 			            // Write variables to the database
 			            update(ref(database, databaseName), {
@@ -1266,6 +1267,7 @@
 			                [checkpointVar]: currentCheckpoint,
 							[checkDistVar]: chkPointDistance,
 							[movementVar]: patternMovement,
+							[nameVar]: characterName,
 							[partMovementVar]: partMoving,
 							[dirMovementVar]: directionMoving,
 							[tagInteractionVar]: tagID,
