--- a/index.html
+++ b/index.html
@@ -1257,7 +1257,7 @@
 						const statusVar = (deviceName === 'hachi_BT') ? 'hachi_status' :'avatar_status' ;
 						const speedVar = (deviceName === 'hachi_BT') ? 'hachi_speed' :'avatar_speed' ;
 						const speakingVar = (deviceName === 'hachi_BT') ? 'hachi_narrating' :'avatar_narrating' ;
-						const nameVar = (deviceName === 'hachi_BT') ? 'hachi_name' :'avatar_name' ;
+						const nameVar = (deviceName === 'hachi_BT') ? 'story_name' :'story_name' ;
 
 			            // Write variables to the database
 			            update(ref(database, databaseName), {
