Next comit changes redirectConsoleToDiv().

--- a/index.html
+++ b/index.html
@@ -321,10 +321,10 @@
 				// Call the function when the script is loaded
 				window.onload = checkVariables;
 
-				function redirectConsoleToDiv() {
+			function redirectConsoleToDiv() {
 				var consoleOutputDiv = document.getElementById('consoleOutput');
 				if (!consoleOutputDiv) {
-					console.error("Div for console output not found");
+					console.error("Div for console output not found.");
 					return;
 				}
 
