--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -3142,7 +3142,7 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
         &lt;/div&gt;
 &lt;/div&gt;
 
-&lt;&lt;include &quot;avatar_preamble&quot;&gt;&gt;	
+&lt;&lt;include &quot;both_preamble&quot;&gt;&gt;	
    
 /*
 &lt;&lt;set $storyWeather to &#39;&#39;&gt;&gt;
