--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2655,79 +2655,7 @@ $avatar_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;
-</tw-passagedata><tw-passagedata pid="62" name="both_end" tags="" position="1300,1925" size="200,100">&lt;&lt;nobr&gt;&gt;
-
-&lt;&lt;set variables().avatar_checkpoint_dist to $avatar_checkpoint_dist&gt;&gt;
-&lt;&lt;set variables().hachi_checkpoint_dist to $hachi_checkpoint_dist&gt;&gt;
-
-&lt;&lt;set $avatar_comment to &quot;&quot;&gt;&gt;
-&lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
-
-&lt;&lt;liveblock&gt;&gt;
-	&lt;&lt;include &quot;evalDist_avatar&quot;&gt;&gt;
-    &lt;&lt;include &quot;evalDist_hachi&quot;&gt;&gt;
-&lt;&lt;/liveblock&gt;&gt;
-
-&lt;&lt;script&gt;&gt;
-makeComments(&#39;hachi&#39;, &#39;waits&#39;); 
-makeComments(&#39;avatar&#39;, &#39;waits&#39;); 
-&lt;&lt;/script&gt;&gt;
-
-&lt;&lt;set  $avatar_prevComment to $avatar_comment &gt;&gt;
-&lt;&lt;repeat 500ms&gt;&gt;
-	&lt;&lt;set  $avatar_currentComment to $avatar_comment&gt;&gt;
-	&lt;&lt;if  $avatar_currentComment !== $avatar_prevComment&gt;&gt;
-    	&lt;&lt;set $avatar_passage to $avatar_comment&gt;&gt;
-		&lt;&lt;set $avatar_prevComment to $avatar_currentComment&gt;&gt;
-          &lt;&lt;script&gt;&gt;
-          var passage_temp = variables().avatar_passage;
-          const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();
-          console.log(renderedText);
-          writeToAvatar(&#39;avatar_passage&#39;,renderedText);
-          &lt;&lt;/script&gt;&gt;
-	&lt;&lt;/if&gt;&gt;
-&lt;&lt;/repeat&gt;&gt;
-
-&lt;&lt;set  $hachi_prevComment to $hachi_comment &gt;&gt;
-&lt;&lt;repeat 500ms&gt;&gt;
-	&lt;&lt;set  $hachi_currentComment to $hachi_comment&gt;&gt;
-	&lt;&lt;if  $hachi_currentComment !== $hachi_prevComment&gt;&gt;
-    	&lt;&lt;set $hachi_passage to $hachi_comment&gt;&gt;
-		&lt;&lt;set $hachi_prevComment to $hachi_currentComment&gt;&gt;
-          &lt;&lt;script&gt;&gt;
-          var passage_temp = variables().hachi_passage;
-          const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();
-          console.log(renderedText);
-          writeToHachi(&#39;hachi_passage&#39;,renderedText);
-          &lt;&lt;/script&gt;&gt;
-	&lt;&lt;/if&gt;&gt;
-&lt;&lt;/repeat&gt;&gt;
-
-&lt;&lt;liveblock&gt;&gt;
-  &lt;div id=&quot;bottomContainer&quot;&gt;
-    &lt;div id=&quot;avatar_story&quot;&gt;
-      $avatar_passage  
-    &lt;/div&gt;
-    &lt;div id=&quot;hachi_story&quot;&gt;
-      $hachi_passage
-    &lt;/div&gt;
-  &lt;/div&gt;
-  
-  &lt;&lt;if $hachi_checkpoint is &quot;hachi_garden&quot; and $avatar_checkpoint is &quot;avatar_garden&quot; and !$end_has_run&gt;&gt;
-    &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
-      &lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint&gt;&gt;
-      &lt;&lt;include &quot;avatar_end&quot;&gt;&gt;
-    &lt;&lt;/replace&gt;&gt;
-    &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
-      &lt;&lt;set $previousHachi_checkpoint to $hachi_checkpoint&gt;&gt;
-      &lt;&lt;include &quot;hachi_end&quot;&gt;&gt;
-    &lt;&lt;/replace&gt;&gt;
-    &lt;&lt;set $end_has_run to true&gt;&gt;
-  &lt;&lt;/if&gt;&gt;
-&lt;&lt;/liveblock&gt;&gt;
-
-&lt;&lt;/nobr&gt;&gt;
-</tw-passagedata><tw-passagedata pid="63" name="avatar_end" tags="" position="1975,1600" size="200,200">&lt;&lt;nobr&gt;&gt;
+</tw-passagedata><tw-passagedata pid="62" name="avatar_end" tags="" position="1975,1600" size="200,200">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;script&gt;&gt;stopComments(`avatar`)&lt;&lt;/script&gt;&gt;
 &lt;&lt;set $avatar_passage to &quot;avatar_end_00/Buro&#39;s eyes widen in surprise as he spots Hachi walking alongside Lina, a flicker of recognition igniting within him. Hachi&#39;s tail wags enthusiastically, his eyes full of joy at the sight of his friend./panting/bgm_Sound.stop();end_Sound.play();/&quot;&gt;&gt;
 
@@ -2761,7 +2689,7 @@ $avatar_passage
 &lt;&lt;/if&gt;&gt;
 
  &lt;&lt;/liveblock&gt;&gt;
- &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="64" name="hachi_end" tags="" position="1725,1600" size="200,200">&lt;&lt;nobr&gt;&gt;
+ &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="63" name="hachi_end" tags="" position="1725,1600" size="200,200">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;script&gt;&gt;stopComments(`hachi`)&lt;&lt;/script&gt;&gt;
 &lt;&lt;set $hachi_passage to &quot;hachi_end_00/Buro&#39;s eyes widen in surprise as he spots Hachi walking alongside Lina, a flicker of recognition igniting within him. Hachi&#39;s tail wags enthusiastically, his eyes full of joy at the sight of his friend./m_heysh2/bgm_Sound.stop();end_Sound.play();/&quot;&gt;&gt;
 
@@ -2795,7 +2723,7 @@ $hachi_passage
 &lt;&lt;/if&gt;&gt;
 
  &lt;&lt;/liveblock&gt;&gt;
- &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="65" name="PassageFooter" tags="" position="1150,325" size="200,100">&lt;&lt;liveblock&gt;&gt;
+ &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="64" name="PassageFooter" tags="" position="1150,325" size="200,100">&lt;&lt;liveblock&gt;&gt;
 
 &lt;&lt;if $prev_avatar_passage !== $avatar_passage&gt;&gt;
    &lt;&lt;set avatar_passage to $avatar_passage&gt;&gt;
@@ -2813,7 +2741,7 @@ $hachi_passage
     &lt;&lt;set $prev_hachi_passage to $hachi_passage&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="66" name="avatar_short_comments" tags="" position="300,1025" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="65" name="avatar_short_comments" tags="" position="300,1025" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;liveblock&gt;&gt;
 $avatar_comment
 	&lt;&lt;if _prevAvatarMovement !== $avatar_movement &amp;&amp; $avatar_movement !== $key_movement&gt;&gt;
@@ -2834,7 +2762,7 @@ $avatar_comment
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;
-</tw-passagedata><tw-passagedata pid="67" name="hachi_short_comments" tags="" position="450,1025" size="100,100">&lt;&lt;nobr&gt;&gt;
+</tw-passagedata><tw-passagedata pid="66" name="hachi_short_comments" tags="" position="450,1025" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
 
 &lt;&lt;set $prev_hachiMovement to $hachi_movement&gt;&gt;
@@ -2869,7 +2797,7 @@ $avatar_comment
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="68" name="comments" tags="" position="300,1150" size="100,100">&lt;&lt;script&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="67" name="comments" tags="" position="300,1150" size="100,100">&lt;&lt;script&gt;&gt;
 if (window._prevAvatarMovement !== window.$avatar_movement &amp;&amp; window.$avatar_movement !== window.$key_movement) {
     makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;);
     console.log(variables().avatar_comment);
@@ -2883,7 +2811,7 @@ if (window.$avatar_comment !== window._prevAvatarComment) {
     console.log(passage_temp); // Ensure passage_temp is correct
     writeToAvatar(&#39;avatar_passage&#39;, passage_temp);
 }
-&lt;&lt;/script&gt;&gt;</tw-passagedata><tw-passagedata pid="69" name="hachi_act2_transition" tags="" position="1325,1175" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;/script&gt;&gt;</tw-passagedata><tw-passagedata pid="68" name="hachi_act2_transition" tags="" position="1325,1175" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set variables().hachi_checkpoint_dist to $hachi_checkpoint_dist&gt;&gt;
 &lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
 
@@ -2971,7 +2899,7 @@ makeComments(&#39;hachi&#39;,&#39;observes&#39;);
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
 
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="70" name="empty" tags="" position="450,1150" size="100,100">EMPTY</tw-passagedata><tw-passagedata pid="71" name="commentMovement_hachi" tags="" position="1050,200" size="200,100">&lt;&lt;if typeof _prevhachiMovement === &#39;undefined&#39;&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="69" name="empty" tags="" position="450,1150" size="100,100">EMPTY</tw-passagedata><tw-passagedata pid="70" name="commentMovement_hachi" tags="" position="1050,200" size="200,100">&lt;&lt;if typeof _prevhachiMovement === &#39;undefined&#39;&gt;&gt;
 	&lt;&lt;set _prevhachiMovement to $hachi_movement&gt;&gt;
 &lt;&lt;elseif _prevhachiMovement !== $hachi_movement&gt;&gt;
 	&lt;&lt;script&gt;&gt;
@@ -2990,7 +2918,7 @@ makeComments(&#39;hachi&#39;,&#39;observes&#39;);
 		&lt;&lt;set $hachi_passage to variables().hachi_passage&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
-</tw-passagedata><tw-passagedata pid="72" name="commentMovement_avatar" tags="" position="1275,200" size="200,100">&lt;&lt;if typeof _prevavatarMovement === &#39;undefined&#39;&gt;&gt;
+</tw-passagedata><tw-passagedata pid="71" name="commentMovement_avatar" tags="" position="1275,200" size="200,100">&lt;&lt;if typeof _prevavatarMovement === &#39;undefined&#39;&gt;&gt;
 	&lt;&lt;set _prevavatarMovement to $avatar_movement&gt;&gt;
 &lt;&lt;elseif _prevavatarMovement !== $avatar_movement&gt;&gt;
 	&lt;&lt;script&gt;&gt;
@@ -3009,7 +2937,7 @@ makeComments(&#39;hachi&#39;,&#39;observes&#39;);
 		&lt;&lt;set $avatar_passage to variables().avatar_passage&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
-</tw-passagedata><tw-passagedata pid="73" name="evalDist_avatar" tags="" position="1275,75" size="200,100">&lt;&lt;nobr&gt;&gt;
+</tw-passagedata><tw-passagedata pid="72" name="evalDist_avatar" tags="" position="1275,75" size="200,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $avatar_arriving to false&gt;&gt;
 &lt;&lt;script&gt;&gt;
 let valuesArray = variables().avatar_checkpoint_dist;
@@ -3020,7 +2948,7 @@ if (atLeastOneEqualTo20) {
 	variables().avatar_arriving=false;
 }
 &lt;&lt;/script&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="74" name="evalDist_hachi" tags="" position="1050,75" size="200,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="73" name="evalDist_hachi" tags="" position="1050,75" size="200,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $hachi_arriving to false&gt;&gt;
 &lt;&lt;script&gt;&gt;
 let valuesArray = variables().hachi_checkpoint_dist;
@@ -3032,7 +2960,7 @@ if (atLeastOneEqualTo20) {
 	variables().hachi_arriving=false;
 }
 &lt;&lt;/script&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="75" name="avatar_act2_transition" tags="" position="2475,1175" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="74" name="avatar_act2_transition" tags="" position="2475,1175" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set variables().avatar_checkpoint_dist to $avatar_checkpoint_dist&gt;&gt;
 &lt;&lt;set $avatar_comment to &quot;&quot;&gt;&gt;
 
@@ -3119,7 +3047,7 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
       &lt;&lt;/if&gt;&gt;
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="76" name="main" tags="" position="1275,675" size="200,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="75" name="main" tags="" position="1275,675" size="200,100">&lt;&lt;nobr&gt;&gt;
 
 &lt;&lt;silently&gt;&gt;
   &lt;&lt;repeat 150ms&gt;&gt;
@@ -3165,7 +3093,7 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
         &lt;/div&gt;
 &lt;/div&gt;
 
-&lt;&lt;include &quot;hachi_wait_end&quot;&gt;&gt;	
+&lt;&lt;include &quot;both_preamble&quot;&gt;&gt;	
    
 /*
 &lt;&lt;set $storyWeather to &#39;&#39;&gt;&gt;
@@ -3232,7 +3160,7 @@ Promise.all([
 */
 &lt;&lt;/script&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="77" name="hachi_bank" tags="" position="1450,1225" size="100,200">&lt;&lt;set $hachi_passage to &quot;hachi_bank/Hachi is close to the bank&#39;s door. Can you see Mrs. Suarez around?/f_sing/&quot;&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="76" name="hachi_bank" tags="" position="1450,1225" size="100,200">&lt;&lt;set $hachi_passage to &quot;hachi_bank/Hachi is close to the bank&#39;s door. Can you see Mrs. Suarez around?/f_sing/&quot;&gt;&gt;
 &lt;&lt;liveblock&gt;&gt;
  &lt;&lt;if $hachi_tag == 23&gt;&gt;
       &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
@@ -3243,21 +3171,21 @@ Promise.all([
   &lt;&lt;else&gt;&gt;
       &lt;&lt;set $hachi_passage to &quot;hachi_bank/This does not seem to be the person Hachi is looking for./notification/&quot;&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
- &lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="78" name="hachi_close" tags="" position="1725,1825" size="200,100">&lt;&lt;nobr&gt;&gt;
+ &lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="77" name="hachi_close" tags="" position="1725,1825" size="200,100">&lt;&lt;nobr&gt;&gt;
 
   &lt;&lt;set $hachi_passage to &quot;hachi_close/This is the end of &#39;Searching for Us,&#39; Buro and Hachi&#39;s story. Thank you for being part of this experience, we hope you have enjoyed it. Please remove your headphones and return your avatar./park3/end_Sound.fade(end_Sound.volume(), 0, 2000);end_Sound.stop();/&quot;&gt;&gt;
 
   &lt;&lt;liveblock&gt;&gt;
   $hachi_passage
   &lt;&lt;/liveblock&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="79" name="avatar_close" tags="" position="1975,1825" size="200,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="78" name="avatar_close" tags="" position="1975,1825" size="200,100">&lt;&lt;nobr&gt;&gt;
 
   &lt;&lt;set $avatar_passage to &quot;avatar_close/This is the end of &#39;Searching for Us,&#39; Buro and Hachi&#39;s story. Thank you for being part of this experience, we hope you have enjoyed it. Please remove your headphones and return your avatar./park3/end_Sound.fade(end_Sound.volume(), 0, 2000);/&quot;&gt;&gt;
 
   &lt;&lt;liveblock&gt;&gt;
   $avatar_passage
   &lt;&lt;/liveblock&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="80" name="hachi_wait_end" tags="" position="1750,1475" size="200,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="79" name="hachi_wait_end" tags="" position="1750,1475" size="200,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set variables().hachi_checkpoint_dist to $hachi_checkpoint_dist&gt;&gt;
 
 &lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
@@ -3306,7 +3234,7 @@ makeComments(&#39;hachi&#39;, &#39;waits&#39;);
 &lt;&lt;/liveblock&gt;&gt;
 
 &lt;&lt;/nobr&gt;&gt;
-</tw-passagedata><tw-passagedata pid="81" name="avatar_end_wait" tags="" position="1950,1475" size="200,100">&lt;&lt;nobr&gt;&gt;
+</tw-passagedata><tw-passagedata pid="80" name="avatar_end_wait" tags="" position="1950,1475" size="200,100">&lt;&lt;nobr&gt;&gt;
 
 &lt;&lt;set variables().avatar_checkpoint_dist to $avatar_checkpoint_dist&gt;&gt;
 
