--- a/index.html
+++ b/index.html
@@ -886,17 +886,25 @@
 					}
 				}
 
+				// Function to adjust the font size dynamically to fit within the maxHeight (in vh)
 				function adjustFontSizeToFit(div, maxHeight) {
 					const viewportHeight = window.innerHeight; // Get the current viewport height in px
-					let fontSize = (viewportHeight * maxHeight) / 100; // Convert maxHeight (in vh) to pixels
+					const divHeight = (viewportHeight * maxHeight) / 100; // Convert maxHeight (in vh) to pixels
 
-					// Set initial font size based on the viewport height
-					div.style.fontSize = fontSize + "px";
+					// Set the max height of the DIV in pixels
+					div.style.maxHeight = divHeight + "px";
 
-					// Loop to reduce font size until text fits within the specified maxHeight
-					while (div.scrollHeight > maxHeight && fontSize > 20) { // Set a minimum font size (10px in this case)
-						fontSize--;
+					// Get the current font size in pixels
+					let fontSize = parseInt(window.getComputedStyle(div).fontSize, 10);
+
+					// Set an initial font size (in px) based on the viewport height
+					let currentHeight = div.scrollHeight;
+
+					// Adjust the font size to ensure the content fits within the max height of the div
+					while (currentHeight > divHeight && fontSize > 10) { // 10px is the minimum font size
+						fontSize -= 1;
 						div.style.fontSize = fontSize + "px";
+						currentHeight = div.scrollHeight; // Get the updated height after resizing
 					}
 				}
 
