--- a/index.html
+++ b/index.html
@@ -1013,6 +1013,7 @@
 								messageID = messageID_tmp;
 								oldMessageID = messageID;
 								lastSpokenMessage = transliteratedMessage;
+								playAction = true;
 							},
 							onend: () => {
 								console.log(deviceName + " end speaking");
