--- a/index.html
+++ b/index.html
@@ -1317,6 +1317,7 @@
 						const statusVar = (deviceName === 'hachi_BT') ? 'hachi_status' :'avatar_status' ;
 						const speedVar = (deviceName === 'hachi_BT') ? 'hachi_speed' :'avatar_speed' ;
 						const speakingVar = (deviceName === 'hachi_BT') ? 'hachi_narrating' :'avatar_narrating' ;
+						const currentPsgVar = (deviceName === 'hachi_BT') ? 'hachi_current_passage' :'avatar_current_passage' ;
 						const nameVar = (deviceName === 'hachi_BT') ? 'story_name' :'story_name' ;
 
 			            // Write variables to the database
@@ -1333,7 +1334,8 @@
 							[tagInteractionVar]: tagID,
 							[statusVar]: blueToothStatus,
 							[speedVar]: speed.toFixed(2),
-							[speakingVar]: messageID+speaking
+							[speakingVar]: messageID+speaking,
+							[currentPsgVar]: messageID
 			            }).then(() => {
 			                //console.log("Variables written to the database successfully!");
 			            }).catch((error) => {
