--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
 							directionMoving = condition.directionMoving;
 							setTimeout(() => {
 								resetVariables(true, false, false); // Reset both movement variables
-								console.log("Movement and direction reset after 3 seconds of inactivity");
+								//console.log("Movement and direction reset after 3 seconds of inactivity");
 							}, 3000);
 						}
 					});
