--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 								console.error(deviceName +' failed to activate wake lock:', err);
 							});
 						} else {
-							console.warn('Wake lock API not supported');
+							console.warn('Wake lock API not supported.');
 						}
 			}
 
